# jingler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bot.py  generate-meta.py  jingle.py  jingle_bot.py  pyproject.toml  run.ps1  run.sh
.github/ISSUE_TEMPLATE/: bug-report.md  feature-idea.md
data/: configuration.EXAMPLE.toml
discordjingles/: configuration.py  guild_settings.py  jingles.py  player.py  utilities.py
jinglebot/: configuration.py  emojis.py  guild_settings.py  jingles.py  logs.py  pagination.py  player.py  utilities.py  voice_state_diff.py
jinglebot/cogs/: guild_settings.py  jingle_player.py  misc.py  user_settings.py
jinglebot/database/: db.py  db_init.sql
jingler/: configuration.py  emojis.py  jingles.py  logs.py  pagination.py  player.py  utilities.py  voice_state_diff.py
jingler/cogs/: guild_settings.py  jingle_player.py  misc.py  user_settings.py
jingler/database/: db.py
